[gd_scene load_steps=7 format=3 uid="uid://bqwsksiexwsjb"]

[ext_resource type="Script" uid="uid://cew6qsyark53w" path="res://scenes/game_floor/game_floor.gd" id="1_wq628"]
[ext_resource type="Resource" uid="uid://d3bnj680tmqdo" path="res://scenes/game_floor/floor_variants/base_floors/cog_golf_course.tres" id="2_nl7ln"]
[ext_resource type="PackedScene" uid="uid://cc7m72lopmrgg" path="res://objects/general_ui/anomaly_tracker/anomaly_tracker.tscn" id="3_2oy21"]
[ext_resource type="Resource" uid="uid://bnubj377geur5" path="res://objects/cog/presets/pools/grunt_cogs.tres" id="3_6rlqe"]
[ext_resource type="Environment" uid="uid://dfbffixgqukix" path="res://scenes/game_floor/default_environment.tres" id="4_7iyfh"]
[ext_resource type="PackedScene" uid="uid://djs6mw66dxqp3" path="res://objects/general_ui/location_text/location_text.tscn" id="5_nggj6"]

[node name="GameFloor" type="Node3D"]
script = ExtResource("1_wq628")
floor_variant = ExtResource("2_nl7ln")
cog_pool = ExtResource("3_6rlqe")

[node name="Rooms" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_7iyfh")

[node name="Modifiers" type="Node" parent="."]

[node name="AnomalyTracker" parent="." instance=ExtResource("3_2oy21")]
visible = false

[node name="LocationText" parent="." instance=ExtResource("5_nggj6")]
